--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@ Some scripts from outside sources were used in the making of this site. Credit t
     <!-- Load External JS-->
     <script src="https://www.w3schools.com/lib/w3.js" onerror="$('.error').css({'display': 'flex' });"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js" onerror="document.getElementById('error').style.display = 'flex';"></script>
-    <script type="text/javascript" src="js/ripple.js" onerror="$('.error').css({'display': 'flex' });"></script>
-    <script type="text/javascript" src="js/scroll.js" onerror="$('.error').css({'display': 'flex' });"></script>
-    <script type="text/javascript" src="js/menu.js" onerror="$('.error').css({'display': 'flex' });"></script>
-    <script type="text/javascript" src="js/tooltip.js" onerror="$('.error').css({'display': 'flex' });"></script>
-    <script type="text/javascript" src="js/background.js" onerror="$('.error').css({'display': 'flex' });"></script>
-    <script type="text/javascript" src="js/randomizer.js" onerror="$('.error').css({'display': 'flex' });"></script>
-    <script type="text/javascript" src="js/include.js" onerror="$('.error').css({'display': 'flex' });"></script>
-    <script type="text/javascript" src="js/loader.js" onerror="$('.error').css({'display': 'flex' });"></script>
-    <script type="text/javascript" src="js/parallax.js" onerror="$('.error').css({'display': 'flex' });"></script>
-    <script type="text/javascript" src="js/load-external.js" onerror="$('.error').css({'display': 'flex' });"></script>
-    <script type="text/javascript" src="js/emergence.min.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/ripple.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/scroll.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/menu.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/tooltip.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/background.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/randomizer.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/include.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/loader.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/parallax.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/load-external.js" onerror="$('.error').css({'display': 'flex' });"></script>
+    <script type="text/javascript" src="JS/emergence.min.js" onerror="$('.error').css({'display': 'flex' });"></script>
 </body>
 
 </html>
