--- a/html/contact.html
+++ b/html/contact.html
@@ -1,7 +1,7 @@
 <div class="contact-card-wrapper basic-flex">
     <div class="contact-card contact-card-1 card" data-emergence="hidden">
         <h3 class="card-title">Contact</h3>
-        <form class="center" method="POST" action="http://formspree.io/meowsom3@gmail.com">
+        <form class="center" method="POST" action="https://formspree.io/meowsom3@gmail.com">
             <input type="text" name="name" placeholder="Name">
             <input type="email" name="email" placeholder="Email">
             <textarea rows="3" name="message" placeholder="Message"></textarea><br>
