--- a/html/about.html
+++ b/html/about.html
@@ -5,7 +5,7 @@
         </div>
         <div class="about-card-right">
             <h3>meowsome</h3>
-            <h4 class="subtitle-inverted">Designer, developer, artist, gamer, nerd.</h4>
+            <h4 class="subtitle-inverted">Developer, artist, gamer, nerd.</h4>
             <table class="wt" style="margin-top:10px">
                 <tbody>
                     <tr>
