Fixes for mobile :)

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -35,8 +35,8 @@
         <a>&#9776;</a>
     </div>
     <div class="menu-items right" style="width:50%;">
-        <div class="x-button basic-flex" onclick="$('.menu-items').removeClass('menu-active');">
-            <p>&#10006;</p>
+        <div class="x-button basic-flex" onclick="$('.menu-items').delay(500).removeClass('menu-active');">
+            <p>&#215;</p>
         </div>
         <a class="fixed-menu-item ripple-dark" href="#home">
             <h4>Home</h4>
