--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Some scripts from outside sources were used in the making of this site. Credit t
 </head>
 
 <body>
-    <div class="loader-wrapper column-flex">
+    <div class="loader-wrapper">
         <div class="loader"></div>
     </div>
     <div class="welcome-point">
@@ -52,7 +52,7 @@ Some scripts from outside sources were used in the making of this site. Credit t
     </div>
     <div class="project-overlay">
         <div class="x-button basic-flex">
-            <p>&#10006;</p>
+            <p>&#215;</p>
         </div>
         <div class="project-overlay-content basic-flex"></div>
         <div class="project-image-view-image basic-flex"></div>
