Removed ripple effect due to bugs :(

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -1,13 +1,13 @@
 <div class="basic-flex">
     <h3 class="title">Portfolio</h3>
     <div class="basic-flex" style="margin-bottom:15px;">
-        <div onclick="$('.project-website').show();$('.project-art').show();$('#all-projects').addClass('project-sort-button-current');$('#websites-only').removeClass('project-sort-button-current');$('#art-only').removeClass('project-sort-button-current');$('.project-website').attr('data-emergence','visible');$('.project-art').attr('data-emergence','visible');" class="project-sort-button project-sort-button-current basic-flex ripple-dark" id="all-projects">
+        <div onclick="$('.project-website').show();$('.project-art').show();$('#all-projects').addClass('project-sort-button-current');$('#websites-only').removeClass('project-sort-button-current');$('#art-only').removeClass('project-sort-button-current');$('.project-website').attr('data-emergence','visible');$('.project-art').attr('data-emergence','visible');" class="project-sort-button project-sort-button-current basic-flex" id="all-projects">
             <a class="subtitle-inverted"><i class="title-image fa fa-list-ul"></i>All Projects</a>
         </div>
-        <div onclick="$('.project-art').hide();$('.project-website').hide();$('.project-website').show();$('#all-projects').removeClass('project-sort-button-current');$('#websites-only').addClass('project-sort-button-current');$('#art-only').removeClass('project-sort-button-current');$('.project-website').attr('data-emergence','visible');$('.project-art').attr('data-emergence','hidden');" class="project-sort-button basic-flex ripple-dark" id="websites-only">
+        <div onclick="$('.project-art').hide();$('.project-website').hide();$('.project-website').show();$('#all-projects').removeClass('project-sort-button-current');$('#websites-only').addClass('project-sort-button-current');$('#art-only').removeClass('project-sort-button-current');$('.project-website').attr('data-emergence','visible');$('.project-art').attr('data-emergence','hidden');" class="project-sort-button basic-flex" id="websites-only">
             <a class="subtitle-inverted"><i class="title-image fa fa-laptop"></i>Websites Only</a>
         </div>
-        <div onclick="$('.project-website').hide();$('.project-art').hide();$('.project-art').show();$('#all-projects').removeClass('project-sort-button-current');$('#websites-only').removeClass('project-sort-button-current');$('#art-only').addClass('project-sort-button-current');$('.project-website').attr('data-emergence','hidden');$('.project-art').attr('data-emergence','visible');" class="project-sort-button basic-flex ripple-dark" id="art-only">
+        <div onclick="$('.project-website').hide();$('.project-art').hide();$('.project-art').show();$('#all-projects').removeClass('project-sort-button-current');$('#websites-only').removeClass('project-sort-button-current');$('#art-only').addClass('project-sort-button-current');$('.project-website').attr('data-emergence','hidden');$('.project-art').attr('data-emergence','visible');" class="project-sort-button basic-flex" id="art-only">
             <a class="subtitle-inverted"><i class="title-image fa fa-pencil"></i>Art Only</a>
         </div>
     </div>
