--- a/html/welcome.html
+++ b/html/welcome.html
@@ -11,16 +11,16 @@
             <p class="subtitle">Web designer/developer, amateur artist, Minecraft server owner, and technology enthusiast.</p>
         </div>
         <div class="right" style="width:50%;">
-            <a class="welcome-menu-item welcome-menu-item-about ripple-dark" href="#welcome-menu">
+            <a class="welcome-menu-item welcome-menu-item-about" href="#welcome-menu">
                 <h4>About</h4>
             </a>
-            <a class="welcome-menu-item welcome-menu-item-skills ripple-dark" href="#skills">
+            <a class="welcome-menu-item welcome-menu-item-skills" href="#skills">
                 <h4>Skills</h4>
             </a>
-            <a class="welcome-menu-item welcome-menu-item-portfolio ripple-dark" href="#portfolio">
+            <a class="welcome-menu-item welcome-menu-item-portfolio" href="#portfolio">
                 <h4>Portfolio</h4>
             </a>
-            <a class="welcome-menu-item welcome-menu-item-contact ripple-dark" href="#contact">
+            <a class="welcome-menu-item welcome-menu-item-contact" href="#contact">
                 <h4>Contact</h4>
             </a>
         </div>
@@ -38,19 +38,19 @@
         <div class="x-button basic-flex" onclick="$('.menu-items').delay(500).removeClass('menu-active');">
             <p>&#215;</p>
         </div>
-        <a class="fixed-menu-item ripple-dark" href="#home">
+        <a class="fixed-menu-item" href="#home">
             <h4>Home</h4>
         </a>
-        <a class="fixed-menu-item fixed-menu-item-about ripple-dark" href="#welcome-menu">
+        <a class="fixed-menu-item fixed-menu-item-about" href="#welcome-menu">
             <h4>About</h4>
         </a>
-        <a class="fixed-menu-item fixed-menu-item-skills ripple-dark" href="#skills">
+        <a class="fixed-menu-item fixed-menu-item-skills" href="#skills">
             <h4>Skills</h4>
         </a>
-        <a class="fixed-menu-item fixed-menu-item-portfolio ripple-dark" href="#portfolio">
+        <a class="fixed-menu-item fixed-menu-item-portfolio" href="#portfolio">
             <h4>Portfolio</h4>
         </a>
-        <a class="fixed-menu-item fixed-menu-item-contact ripple-dark" href="#contact">
+        <a class="fixed-menu-item fixed-menu-item-contact" href="#contact">
             <h4>Contact</h4>
         </a>
     </div>
