--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@ Some scripts from outside sources were used in the making of this site. Credit t
     <meta name="keywords" content="meowsome, mwsm, web design, web developer, nogard, leafeon, html, css, jquery, javascript, php">
     <meta name="description" content="Web designer/developer, amateur artist, Minecraft server owner, and technology enthusiast. This website is a portfolio of meowsome's work!">
     <!-- Load External CSS-->
-    <link rel="stylesheet" href="CSS/ripple.css" onerror="$('.error').css({'display': 'flex' });">
     <link rel="stylesheet" href="CSS/style.css" onerror="$('.error').css({'display': 'flex' });">
     <link rel="stylesheet" href="CSS/loader.css" onerror="$('.error').css({'display': 'flex' });">
     <link rel="stylesheet" href="CSS/timeline.css" onerror="$('.error').css({'display': 'flex' });">
@@ -42,7 +41,7 @@ Some scripts from outside sources were used in the making of this site. Credit t
         <div w3-include-html="html/skills.html"></div>
     </div>
     <div class="portfolio" id="portfolio">
-        <div w3-include-html="html/portfolio.html">Test</div>
+        <div w3-include-html="html/portfolio.html"></div>
     </div>
     <div class="contact" id="contact">
         <div w3-include-html="html/contact.html"></div>
@@ -96,7 +95,6 @@ Some scripts from outside sources were used in the making of this site. Credit t
     <!-- Load External JS-->
     <script src="https://www.w3schools.com/lib/w3.js" onerror="$('.error').css({'display': 'flex' });"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js" onerror="document.getElementById('error').style.display = 'flex';"></script>
-    <script type="text/javascript" src="JS/ripple.js" onerror="$('.error').css({'display': 'flex' });"></script>
     <script type="text/javascript" src="JS/scroll.js" onerror="$('.error').css({'display': 'flex' });"></script>
     <script type="text/javascript" src="JS/menu.js" onerror="$('.error').css({'display': 'flex' });"></script>
     <script type="text/javascript" src="JS/tooltip.js" onerror="$('.error').css({'display': 'flex' });"></script>
