--- a/projects/bucketmuncher.html
+++ b/projects/bucketmuncher.html
@@ -9,7 +9,7 @@
         <a class="project-more touch-big" onclick="alert('The link to this site is no longer available');" target="_blank" style="cursor:pointer;">Launch Site <i class="fa fa-external-link"></i></a>
     </div>
     <div class="project-section basic-flex" style="height:auto;">
-        <img class="project-image-featured" src="images/projects/sites/bucketmuncher-1.png">
+        <img class="project-image-featured" src="images/projects/sites/bucketmuncher-1.jpg">
     </div>
     <div class="project-section column-flex" style="height:auto;">
         <div class="project-description">
@@ -19,8 +19,8 @@
         </div>
     </div>
     <div class="project-section basic-flex" style="height:auto;">
-        <img class="project-image" src="images/projects/sites/bucketmuncher-2.png">
-        <img class="project-image" src="images/projects/sites/bucketmuncher-3.png">
-        <img class="project-image" src="images/projects/sites/bucketmuncher-4.png">
+        <img class="project-image" src="images/projects/sites/bucketmuncher-2.jpg">
+        <img class="project-image" src="images/projects/sites/bucketmuncher-3.jpg">
+        <img class="project-image" src="images/projects/sites/bucketmuncher-4.jpg">
     </div>
 </div>
