--- a/index.html
+++ b/index.html
@@ -178,16 +178,16 @@ Some scripts from outside sources were used in the making of this site. Credit t
                         <div class="bar-circle" style="background:#cea800;"></div>
                     </div>
                 </div>
-                <p class="gray">GIMP</p>
-                <div class="bar-wrapper">
-                    <div class="bar" style="background:#585241;width:35%;">
-                        <div class="bar-circle" style="background:#585241;"></div>
-                    </div>
-                </div>
                 <p class="gray">Photoshop</p>
                 <div class="bar-wrapper">
-                    <div class="bar" style="background:#5DBCD2;width:25%;">
+                    <div class="bar" style="background:#5DBCD2;width:40%;">
                         <div class="bar-circle" style="background:#5DBCD2;"></div>
+                    </div>
+                </div>
+                <p class="gray">GIMP</p>
+                <div class="bar-wrapper">
+                    <div class="bar" style="background:#585241;width:30%;">
+                        <div class="bar-circle" style="background:#585241;"></div>
                     </div>
                 </div>
             </div>
@@ -211,22 +211,16 @@ Some scripts from outside sources were used in the making of this site. Credit t
                         <div class="bar-circle" style="background:#21759b;"></div>
                     </div>
                 </div>
-                <p class="gray">PHP</p>
-                <div class="bar-wrapper">
-                    <div class="bar" style="background:#7277af;width:30%;">
-                        <div class="bar-circle" style="background:#7277af;"></div>
-                    </div>
-                </div>
                 <p class="gray">JavaScript &amp; jQuery</p>
                 <div class="bar-wrapper">
-                    <div class="bar" style="background:#fa9b1b;width:20%;">
+                    <div class="bar" style="background:#fa9b1b;width:40%;">
                         <div class="bar-circle" style="background:#fa9b1b;"></div>
                     </div>
                 </div>
-                <p class="gray">Enjin</p>
+                <p class="gray">PHP</p>
                 <div class="bar-wrapper">
-                    <div class="bar" style="background:#5DBCD2;width:20%;">
-                        <div class="bar-circle" style="background:#5DBCD2;"></div>
+                    <div class="bar" style="background:#7277af;width:20%;">
+                        <div class="bar-circle" style="background:#7277af;"></div>
                     </div>
                 </div>
             </div>
@@ -292,6 +286,15 @@ Some scripts from outside sources were used in the making of this site. Credit t
                     <a class="subtitle-inverted"><i class="title-image fa fa-pencil"></i>Art Only</a>
                 </div>
             </div>
+            <a class="project-art external" href="images/projects/art/ilumilince.png" data-emergence="hidden">
+                <div class="card-featured-small" style="background:url('images/projects/art/thumbnails/ilumilince.png') center no-repeat;">
+                    <div class="card-featured-small-hidden column-flex" style="background:#F0DC8B;">
+                        <h4 class="card-title animated-card-title">Ilumilince Gift</h4>
+                        <div class="title-separator" style="background:#F0DC8B;"></div>
+                        <p class="subtitle animated-subtitle">Photoshop / Wacom<br>February, 2018</p>
+                    </div>
+                </div>
+            </a>
             <a class="project-website external" href="projects/marcel.html" data-emergence="hidden">
                 <div class="card-featured-small" style="background:url('images/projects/sites/marcel.jpg') center no-repeat;">
                     <div class="card-featured-small-hidden column-flex" style="background:#099B91;">
