--- a/projects/bucketmuncher-2017.html
+++ b/projects/bucketmuncher-2017.html
@@ -6,7 +6,7 @@
         <h1>BucketMuncher</h1>
         <p class="subtitle" style="text-align:center;">HTML/CSS/JS/jQuery<br>December, 2017</p>
         <p class="project-summary">I spruced up BucketMuncher's personal website another time with the new Material Design template that I created!</p>
-        <a class="project-more touch-big" href="https://meowsome.github.io/bucketmuncher" target="_blank" style="cursor:pointer;">Launch Site <i class="fa fa-external-link"></i></a>
+        <a class="project-more touch-big" href="http://bucketmuncher.vulpix.pw" target="_blank" style="cursor:pointer;">Launch Site <i class="fa fa-external-link"></i></a>
     </div>
     <div class="project-section basic-flex" style="height:auto;">
         <img class="project-image-featured" src="images/projects/sites/bucketmuncher-2017-1.jpg">
