--- a/projects/marcel.html
+++ b/projects/marcel.html
@@ -6,7 +6,7 @@
         <h1>Marcel</h1>
         <p class="subtitle" style="text-align:center;">Node.js / discord.js<br>January, 2018</p>
         <p class="project-summary">A simple, cute, and personable bot for any Discord server that adds both convenience and fun.</p>
-        <a class="project-more touch-big" href="https://meowsome.github.io/marcel-site" target="_blank" style="cursor:pointer;">Launch Site <i class="fa fa-external-link"></i></a>
+        <a class="project-more touch-big" href="http://marcel.vulpix.pw" target="_blank" style="cursor:pointer;">Launch Site <i class="fa fa-external-link"></i></a>
     </div>
     <div class="project-section basic-flex" style="height:auto;">
         <img class="project-image-featured" src="images/projects/sites/marcel-1.png">
